--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body{
 }
 
 #home{
-	background-color:powderblue;
+	background-image: url("../imgs/elliott-engelmann-DjlKxYFJlTc-unsplash.jpg");
+	/* background-color:powderblue; */
 	/* background-color:rgb(85, 162, 172); */
 }
 
@@ -124,18 +125,16 @@ header, h1, footer{
 	margin: 10px 0;
 }
 
+
 nav{
 	color: #3B3B3B;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	
 }
 
 .nav_links{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content:space-between;
+	text-align: center;
 }
 
 nav a{
@@ -144,6 +143,29 @@ nav a{
 	text-decoration: dashed;
 
   }
+
+  
+  
+  p {
+	font-size:12px;
+	color:#999;
+	margin-top:200px;
+  }
+
+  
+/* 
+  nav li{
+	display:inline;
+	padding-right:20px;
+  
+  }
+  
+  
+  nav{
+	background-color: #ddd;
+	padding: 25px 0; 
+	text-align: left;
+  } */
 
 a:hover{
 	text-decoration: underline;
@@ -207,6 +229,113 @@ nav li{
 
 }
 
+/* put in citation here*/
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
+.sign{
+  text-align:center;
+  /* background:linear-gradient(141deg, #ccc 25%, #eee 40%, #ddd 55%); */
+  color:white;
+  font-weight:bolder;  
+  font-family:'Roboto';
+  font-size:35px;
+  /* padding-top:40vh;
+  height:100vh; */
+  /* overflow:hidden; */
+  /* -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0,0,0); */
+}
+
+div {
+  display:inline-block;
+  overflow:hidden;
+  white-space:nowrap;
+}
+
+div:first-of-type {    /* For increasing performance 
+                       ID/Class should've been used. 
+                       For a small demo 
+                       it's okaish for now */
+  /* animation: showup 7s 1; */
+  animation-duration: 7s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+
+
+  font-weight:bolder;
+}
+
+div:last-of-type {
+  width:0px;
+  animation: reveal 7s 1;
+  animation-duration: 7s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+
+
+  font-weight:bolder;
+}
+
+div:last-of-type span {
+  margin-left:-355px;
+  animation: slidein 7s 1;
+  animation-duration: 7s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+
+
+  font-weight:bolder;
+}
+
+@keyframes showup {
+    0% {opacity:0;}
+    20% {opacity:1;}
+    80% {opacity:1;}
+    100% {opacity:0;}
+}
+
+@keyframes slidein {
+    0% { margin-left:-800px; }
+    20% { margin-left:-800px; }
+    35% { margin-left:0px; }
+    100% { margin-left:0px; }
+}
+
+@keyframes reveal {
+    0% {opacity:0;width:0px;}
+    20% {opacity:1;width:0px;}
+    30% {width:355px;}
+    80% {opacity:1;}
+    100% {opacity:0;width:355px;}
+}
+
+
+p {
+  font-size:12px;
+  color:#999;
+  margin-top:200px;
+}
+
+
+.column {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  height: 100px;
+	/* width: 33.33%; */
+  }
+  
+  /* Clear floats after the columns */
+  /* .row:after {
+	content: "";
+	display: table;
+	clear: both;
+  } */
 
 /*Added this so the links stay the same color*/
 /* a:visited{color:white} */
